styles/site.css
@font-face {
    font-display: swap;
    font-family: "EB Garamond";
    font-style: normal;
    font-weight: 400;
    src: url('../fonts/eb-garamond-v26-latin-regular.woff2') format('woff2');
    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

:root {
    --primary-color: #811112;
    --secondary-color: #AC3834;
    --accent-color: #CAB7A1;
    --contrast-color: #B29576;
    --paragraph-color: #3A3B3C;
}

h1,
h2,
h3,
a,
p,
.nav-divider,
.entry-label {
    font-family: "EB Garamond", serif;
}

h1 {
    color: var(--primary-color);
    font-weight: 800;
    font-size: 60px;
}

h2 {
    color: var(--secondary-color);
    font-size: 22px;
}

h3 {
    color: var(--primary-color);
    font-size: 20px;
    font-style: italic;
    margin-bottom: 20px;
}

p {
    color: var(--paragraph-color);
    font-size: 20px;
}

article>a,
nav a {
    color: black;
    text-decoration: underline;
}

main {
    margin: 20px auto;
    width: min(800px, 90vw);
    display: flex;
    flex-direction: column;
}

hr {
    margin-top: 10px;
    margin-bottom: 10px;
    height: 2px;
    background-color: black;
}

body>nav {
    background-color: var(--accent-color);
    padding: 10px 15px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

nav img {
    height: 1em;
}

article p+p {
    margin-top: 20px;
}

article img {
    margin: 10px 0;
    max-width: 100%;
}

footer p {
    font-size: 14px;
    margin-top: 20px;
}

.intro {
    height: 100vh;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.intro img {
    width: min(500px, 80%);
}

.intro h1,
h2 {
    line-height: 1;
}

.intro nav {
    margin-top: 10px;
}

.entry-label {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    max-width: 50vw;
}

.entry-label+.entry-label {
    margin-top: 10px;
}

.titles-label {
    display: flex;
    flex-direction: column;
}

.title-label {
    color: black;
    font-size: min(22px, 2vw)
}

.subtitle-label,
.date-label {
    color: var(--paragraph-color);
    font-size: min(16px, 2vw)
}

